--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,10 @@ Thumbs.db
 
 # Yarn integrity file
 .yarn-integrity
+
+# FRONTEND / REMIX
+frontend/node_modules
+frontend/build
+frontend/public/build
+frontend/.cache
+frontend/public
